--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+@layer base{
+    html{
+        font-family:'Roboto', sans-serif;
+        margin: 0;
+        padding: 0;
+    }
+    body{
+        background-color: rgb(250, 248, 249);
+    }
+}
+
 #root {
     width: 100vw;
     height: 100vh;
+}
+
+.prominent-hr {
+    border: none;
+    height: 1px;
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.05), #dbdbdb, rgba(0, 0, 0, 0.05));
+  }
+
+html::-webkit-scrollbar{
+    width: 0vw;
+}
+
+html::-webkit-scrollbar-track-piece{
+    color: gray;
+}
+
+html::-webkit-scrollbar-track-piece{
+    color: gray;
 }
